--- a/flaskr/static/homePage-style.css
+++ b/flaskr/static/homePage-style.css
@@ -2,23 +2,25 @@
     box-sizing: border-box;
     /*border: 1px solid red !important*/
   }
-  
-  html,body {
-    overflow-x: hidden;
-    font-family: 'Red Hat Display';
-    background-attachment: fixed;
-    background-size: cover;
 
+  html, body {
     background-image: linear-gradient(to top, rgba(33,9,182,1), lightblue);
+    padding: 0;
+    margin: auto 0;
   }
-  
+
   /* ***NAVIGATION LINKS SECTION *** */
-  
+
 /*styling the nav bar*/
-div.navbar-nav {
+#nav-bar {
+  padding: 2vw 2vw 0;
+  margin: 8px 8px 0;
+}
+
+/* div.navbar-nav {
     display: flex;
     /*margin-bottom: 10px;*/
-    z-index: 0;
+    /*z-index: 0;
 }
 
 div.navbar-nav a {
@@ -39,81 +41,99 @@ div.right {
   text-align: right;
   margin: 0 auto;
   margin-right: 0;
-}
+} */
 
-/*styling the JoyBot website title*/  
-#frontText {
-  color: black;
-  font-size: 80px;
-  margin: 0 0 10px 0;
-
-  position: absolute;
-  width: 30rem;
-  height: 20rem;
-  left: 38rem;
-  top: 20rem;
-  
-  font-family: 'Red Hat Display';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 80px;
-  line-height: 106px;
-  
-  color: #FFFFFF;
-}
+/* #main-content {
+  display: flex;
+  flex-direction: column;
+} */
 
 /*styling the home page background image*/
 #front {
   width: 100%;
-  height: 100vh;
-  
-  background-image: linear-gradient(to top, rgba(33,9,182,1), lightblue);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
 }
 
-/*styling the website description*/
-#web-summary {
-  position: absolute;
-  width: 30rem;
-  height: 20rem;
-  left: 38rem;
-  top: 25rem;
+.frontCenter {
+  display: flex;
+  position: relative;
 
-  font-family: 'Red Hat Display';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 30px;
+  width: 60%;
+  margin: 0 auto;
+}
+
+.frontContainerLeft {
+  text-align: center;
+}
+
+/*styling the homepage JoyBot image*/
+#joypic {
+  /* background-size: contain; */
+  width: 15em;
+  height: 35em;
+  align-self: flex-end;
+  /* height: 614px;
+  width: 316px; */
+  opacity: 0.9;
+  text-align: center;
+  /* position: absolute;
+  width: 20rem;
+  height: 38rem;
+  left: 15rem; */
+}
+
+.frontContainerRight {
+    width: 100%;
+    margin-left: 2vw;
+    display: flex;
+    /* flex-direction: column; */
+    position: relative;
+    /* align-self: center; */
+}
+
+/*styling the JoyBot website title*/
+#titleDescCntr {
+    margin-top: auto;
+    position: absolute;
+    bottom: 20px;
+    /* width: 80%; */
+    /* width: 50vw; */
+}
+
+#websiteTitle {
+  font-size: 6vw;
+  margin: 0 0 10px 0;
 
   color: #FFFFFF;
 }
 
-/*styling the homepage JoyBot image*/
-#joy-image-section img {
-  background-size: contain;
-  align-self: flex-end;
-  height: 614px;
-  width: 316px;
-  opacity: 0.9;
 
-  position: absolute;
-  width: 20rem;
-  height: 38rem;
-  left: 15rem;
+/*styling the website description*/
+#websiteDescription {
+  /* position: absolute;
+  width: 30rem;
+  height: 20rem;
+  left: 38rem;
+  top: 25rem; */
+
+  font-size: 18px;
+  /* line-height: 30px; */
+
+  color: #FFFFFF;
 }
+
+
+
 
 /*styling the background image of frontPage 2*/
 #frontPage2 {
   color: white;
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  overflow: hidden;
-  /*line-height: 10rem;*/
-  
+  /* width: 100%; */
+  /* margin: 0 auto; */
+  text-align: center;
+  padding: 3vh 6vw;
+  padding: 2rem 0;
+  flex-grow: 2;
+
   background-image: url("img/homePage2background.png");
   background-color: rgba(33, 9, 182, 0);
   background-repeat: no-repeat;
@@ -122,19 +142,99 @@ div.right {
   background-attachment: fixed;
 }
 
-/*styling of moodtracker icon on home page 2*/
-#moodtracker-box {
+/* styling of moodtracker, mood randomizer, and Joybot icon on home page 2 */
+#moodtracker-box, #moodrandomizer-box, #JoyBot-box {
   text-align: center;
+  display: flex;
+  margin-bottom: 4vh;
+  align-items: center;
+  justify-content: center;
 }
 
-/*styling of mood randomizer icon on home page 2*/
-#moodrandomizer-box {
-  text-align: center;
-}
-
-/*styling of JoyBot icon on home page 2*/
 #JoyBot-box {
-  text-align: center;
+    margin-bottom: 0;
 }
 
 
+.image-icons {
+  background-color: white;
+  border-radius: 10px;
+  width: 13em;
+  height: 8em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-desc {
+  width: 15em;
+  margin-left: 1em;
+}
+
+.image-desc p, .image-desc h3 {
+  margin: 1vh 0;
+}
+
+
+/* sizing the icons to fit the box */
+#mood-tracker-icon, #mood-randomizer-icon {
+  width: 8em;
+  height: 7em;
+}
+
+#joy-image-icon {
+    width: 4.5em;
+}
+
+
+@media only screen and (max-width: 800px) {
+    .frontCenter {
+      width: 80%;
+    }
+}
+
+
+@media only screen and (max-width: 570px) {
+
+    .frontCenter {
+      display: block;
+      width: 80%;
+      margin: 0 auto;
+    }
+
+    #titleDescCntr {
+      bottom: 0;
+    }
+
+    #titleDescCntr h1, #titleDescCntr p{
+      color: white;
+    }
+
+    #joy-image-section {
+      margin: 0 auto;
+    }
+
+    #joypic {
+      opacity: 0.4;
+    }
+
+    .frontContainerRight {
+        margin-left: 0;
+    }
+
+    #moodtracker-box, #moodrandomizer-box, #JoyBot-box {
+      display: flex;
+      flex-direction: column;
+      margin: auto;
+      text-align: center;
+      margin-bottom: 3vh;
+    }
+
+    .image-icons, .image-desc {
+      margin-left: 0;
+      text-align: center;
+    }
+    .image-desc {
+        width: 100%;
+    }
+}
