added additional mood options

--- a/flaskr/templates/moodRandomizerTemplate.html
+++ b/flaskr/templates/moodRandomizerTemplate.html
@@ -18,7 +18,7 @@
 
         <h1>{{ content.mood }}</h1>
 
-        <h2>Sit back, relax, and enjoy this!</h2>
+        <h2>Here's something that should make you feel {{mood_inp}}...</h2>
         <br>
 
         {% if content.type == "Video" %}
