--- a/flaskr/static/MoodRandomizerLaugh.css
+++ b/flaskr/static/MoodRandomizerLaugh.css
@@ -1,3 +1,7 @@
+.center {
+    padding: 0;
+}
+
 h1 {
     color: white;
     font-size: 50px;
@@ -7,43 +11,61 @@ h2 {
     color: white;
 }
 
-/* .dropdown {
-    text-align: center;
-    left: 50%;
-    margin: 0 auto;
-    font-family: 'Red Hat Display';
-    width: 120px;
-    height: 30px;
-} */
-
-.hi {
-    background-color: black;
-    font-family: 'Red Hat Display';
-    color: white;
-    width: 200px;
-    height: 40px;
-    outline-color: black;
-    border-radius: 15px;
-    font-size: 20px;
-}
+/* Style select picker */
 #selectpicker {
     font-size: 17px;
     border-radius: 7px;
     padding: 0.5vw;
 }
+
 label {
     font-size: 25px;
     color: white;
 }
 
-/* .form-control {
-    width: auto;
-    display: inline-block;
+.videoContainer {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    margin: 0;
+    /* margin: 0 10px; */
 }
-/* .form-select {
-    font-size: 10px;
-} */
-/* label {
-    font-size: 20px;
-    color: white;
-} */
+
+.videoContainer iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+/* screens greater than 600 -- tablet */
+@media only screen and (min-width: 600px) {
+
+    .center {
+        padding: 0 8vw;
+    }
+
+    img {
+        width: 80%;
+        height: auto;
+    }
+}
+
+/* screens greater than 800 -- desktop */
+@media only screen and (min-width: 1050px) {
+
+    .center {
+        padding: 0 18vw;
+    }
+
+    img {
+        width: 70%;
+        height: auto;
+    }
+}
