--- a/flaskr/static/JoyBotPage.css
+++ b/flaskr/static/JoyBotPage.css
@@ -1,4 +1,4 @@
-/* give credit */
+/* Credit for general template of chatbot CSS code: Huzaif Sayyed */
 
 :root {
     --body-bg: linear-gradient(135deg, white 0%, white 100%);
