--- a/flaskr/templates/JoyBotPage.html
+++ b/flaskr/templates/JoyBotPage.html
@@ -1,4 +1,4 @@
-<!--Give credit to author of corona chatbot-->
+<!--Credit for general template of chatbot HTML code: Huzaif Sayyed-->
 
 {% extends 'base.html' %}
 
